--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
 
 <router-outlet></router-outlet>
 
-<app-home></app-home>
+<!-- <app-home></app-home> -->
 
-<!-- Hello World -->
-<!-- Hell -->
+<app-shop></app-shop>
