blog page,shopping cart

--- a/src/app/shop/shop-spad/shop-spad.component.html
+++ b/src/app/shop/shop-spad/shop-spad.component.html
@@ -225,10 +225,10 @@
                           <div class="product__item__pic set-bg" data-setbg="img/product/product-3.jpg">
                               <span class="label">Sale</span>
                               <ul class="product__hover">
-                                  <li><a href="#"><img src="img/icon/heart.png" alt=""></a></li>
-                                  <li><a href="#"><img src="img/icon/compare.png" alt=""> <span>Compare</span></a>
+                                  <li><a href="#"><img src="assets/img/icon/heart.png" alt=""></a></li>
+                                  <li><a href="#"><img src="assets/img/icon/compare.png" alt=""> <span>Compare</span></a>
                                   </li>
-                                  <li><a href="#"><img src="img/icon/search.png" alt=""></a></li>
+                                  <li><a href="#"><img src="assets/img/icon/search.png" alt=""></a></li>
                               </ul>
                           </div>
                           <div class="product__item__text">
@@ -260,10 +260,10 @@
                       <div class="product__item">
                           <div class="product__item__pic set-bg" data-setbg="img/product/product-4.jpg">
                               <ul class="product__hover">
-                                  <li><a href="#"><img src="img/icon/heart.png" alt=""></a></li>
-                                  <li><a href="#"><img src="img/icon/compare.png" alt=""> <span>Compare</span></a>
+                                  <li><a href="#"><img src="assets/img/icon/heart.png" alt=""></a></li>
+                                  <li><a href="#"><img src="assets/img/icon/compare.png" alt=""> <span>Compare</span></a>
                                   </li>
-                                  <li><a href="#"><img src="img/icon/search.png" alt=""></a></li>
+                                  <li><a href="#"><img src="assets/img/icon/search.png" alt=""></a></li>
                               </ul>
                           </div>
                           <div class="product__item__text">
@@ -296,10 +296,10 @@
                           <div class="product__item__pic set-bg" data-setbg="img/product/product-6.jpg">
                               <span class="label">Sale</span>
                               <ul class="product__hover">
-                                  <li><a href="#"><img src="img/icon/heart.png" alt=""></a></li>
-                                  <li><a href="#"><img src="img/icon/compare.png" alt=""> <span>Compare</span></a>
+                                  <li><a href="#"><img src="assets/img/icon/heart.png" alt=""></a></li>
+                                  <li><a href="#"><img src="assets/img/icon/compare.png" alt=""> <span>Compare</span></a>
                                   </li>
-                                  <li><a href="#"><img src="img/icon/search.png" alt=""></a></li>
+                                  <li><a href="#"><img src="assets/img/icon/search.png" alt=""></a></li>
                               </ul>
                           </div>
                           <div class="product__item__text">
@@ -331,10 +331,10 @@
                       <div class="product__item">
                           <div class="product__item__pic set-bg" data-setbg="img/product/product-7.jpg">
                               <ul class="product__hover">
-                                  <li><a href="#"><img src="img/icon/heart.png" alt=""></a></li>
-                                  <li><a href="#"><img src="img/icon/compare.png" alt=""> <span>Compare</span></a>
+                                  <li><a href="#"><img src="assets/img/icon/heart.png" alt=""></a></li>
+                                  <li><a href="#"><img src="assets/img/icon/compare.png" alt=""> <span>Compare</span></a>
                                   </li>
-                                  <li><a href="#"><img src="img/icon/search.png" alt=""></a></li>
+                                  <li><a href="#"><img src="assets/img/icon/search.png" alt=""></a></li>
                               </ul>
                           </div>
                           <div class="product__item__text">
@@ -366,10 +366,10 @@
                       <div class="product__item">
                           <div class="product__item__pic set-bg" data-setbg="img/product/product-8.jpg">
                               <ul class="product__hover">
-                                  <li><a href="#"><img src="img/icon/heart.png" alt=""></a></li>
-                                  <li><a href="#"><img src="img/icon/compare.png" alt=""> <span>Compare</span></a>
+                                  <li><a href="#"><img src="assets/img/icon/heart.png" alt=""></a></li>
+                                  <li><a href="#"><img src="assets/img/icon/compare.png" alt=""> <span>Compare</span></a>
                                   </li>
-                                  <li><a href="#"><img src="img/icon/search.png" alt=""></a></li>
+                                  <li><a href="#"><img src="assets/img/icon/search.png" alt=""></a></li>
                               </ul>
                           </div>
                           <div class="product__item__text">
@@ -401,10 +401,10 @@
                       <div class="product__item">
                           <div class="product__item__pic set-bg" data-setbg="img/product/product-9.jpg">
                               <ul class="product__hover">
-                                  <li><a href="#"><img src="img/icon/heart.png" alt=""></a></li>
-                                  <li><a href="#"><img src="img/icon/compare.png" alt=""> <span>Compare</span></a>
+                                  <li><a href="#"><img src="assets/img/icon/heart.png" alt=""></a></li>
+                                  <li><a href="#"><img src="assets/img/icon/compare.png" alt=""> <span>Compare</span></a>
                                   </li>
-                                  <li><a href="#"><img src="img/icon/search.png" alt=""></a></li>
+                                  <li><a href="#"><img src="assets/img/icon/search.png" alt=""></a></li>
                               </ul>
                           </div>
                           <div class="product__item__text">
@@ -437,10 +437,10 @@
                           <div class="product__item__pic set-bg" data-setbg="img/product/product-10.jpg">
                               <span class="label">Sale</span>
                               <ul class="product__hover">
-                                  <li><a href="#"><img src="img/icon/heart.png" alt=""></a></li>
-                                  <li><a href="#"><img src="img/icon/compare.png" alt=""> <span>Compare</span></a>
+                                  <li><a href="#"><img src="assets/img/icon/heart.png" alt=""></a></li>
+                                  <li><a href="#"><img src="assets/img/icon/compare.png" alt=""> <span>Compare</span></a>
                                   </li>
-                                  <li><a href="#"><img src="img/icon/search.png" alt=""></a></li>
+                                  <li><a href="#"><img src="assets/img/icon/search.png" alt=""></a></li>
                               </ul>
                           </div>
                           <div class="product__item__text">
@@ -472,10 +472,10 @@
                       <div class="product__item">
                           <div class="product__item__pic set-bg" data-setbg="img/product/product-11.jpg">
                               <ul class="product__hover">
-                                  <li><a href="#"><img src="img/icon/heart.png" alt=""></a></li>
-                                  <li><a href="#"><img src="img/icon/compare.png" alt=""> <span>Compare</span></a>
+                                  <li><a href="#"><img src="assets/img/icon/heart.png" alt=""></a></li>
+                                  <li><a href="#"><img src="assets/img/icon/compare.png" alt=""> <span>Compare</span></a>
                                   </li>
-                                  <li><a href="#"><img src="img/icon/search.png" alt=""></a></li>
+                                  <li><a href="#"><img src="assets/img/icon/search.png" alt=""></a></li>
                               </ul>
                           </div>
                           <div class="product__item__text">
@@ -508,10 +508,10 @@
                           <div class="product__item__pic set-bg" data-setbg="img/product/product-12.jpg">
                               <span class="label">Sale</span>
                               <ul class="product__hover">
-                                  <li><a href="#"><img src="img/icon/heart.png" alt=""></a></li>
-                                  <li><a href="#"><img src="img/icon/compare.png" alt=""> <span>Compare</span></a>
+                                  <li><a href="#"><img src="assets/img/icon/heart.png" alt=""></a></li>
+                                  <li><a href="#"><img src="assets/img/icon/compare.png" alt=""> <span>Compare</span></a>
                                   </li>
-                                  <li><a href="#"><img src="img/icon/search.png" alt=""></a></li>
+                                  <li><a href="#"><img src="assets/img/icon/search.png" alt=""></a></li>
                               </ul>
                           </div>
                           <div class="product__item__text">
@@ -543,10 +543,10 @@
                       <div class="product__item">
                           <div class="product__item__pic set-bg" data-setbg="img/product/product-13.jpg">
                               <ul class="product__hover">
-                                  <li><a href="#"><img src="img/icon/heart.png" alt=""></a></li>
-                                  <li><a href="#"><img src="img/icon/compare.png" alt=""> <span>Compare</span></a>
+                                  <li><a href="#"><img src="assets/img/icon/heart.png" alt=""></a></li>
+                                  <li><a href="#"><img src="assets/img/icon/compare.png" alt=""> <span>Compare</span></a>
                                   </li>
-                                  <li><a href="#"><img src="img/icon/search.png" alt=""></a></li>
+                                  <li><a href="#"><img src="assets/img/icon/search.png" alt=""></a></li>
                               </ul>
                           </div>
                           <div class="product__item__text">
@@ -578,10 +578,10 @@
                       <div class="product__item">
                           <div class="product__item__pic set-bg" data-setbg="img/product/product-14.jpg">
                               <ul class="product__hover">
-                                  <li><a href="#"><img src="img/icon/heart.png" alt=""></a></li>
-                                  <li><a href="#"><img src="img/icon/compare.png" alt=""> <span>Compare</span></a>
+                                  <li><a href="#"><img src="assets/img/icon/heart.png" alt=""></a></li>
+                                  <li><a href="#"><img src="assets/img/icon/compare.png" alt=""> <span>Compare</span></a>
                                   </li>
-                                  <li><a href="#"><img src="img/icon/search.png" alt=""></a></li>
+                                  <li><a href="#"><img src="assets/img/icon/search.png" alt=""></a></li>
                               </ul>
                           </div>
                           <div class="product__item__text">
