--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,8 @@
 
 <!-- <app-home></app-home> -->
 
-<app-shop></app-shop>
+<!-- <app-shop></app-shop> -->
+
+<!-- <app-shopping-cart></app-shopping-cart> -->
+
+<app-blog></app-blog>
