--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 
 <router-outlet></router-outlet>
 
-<app-home></app-home>
+<app-shop-deatils></app-shop-deatils>
 
 <!-- Hello World -->
 <!-- Helloooooooooooooooo -->
