--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -41,7 +41,8 @@
         <div class="col-lg-6 col-md-5">
           <div class="header__top__right">
             <div class="header__top__links">
-              <a href="#">Sign in</a>
+              <a routerLink="register">Register</a>
+              <a routerLink="login">Sign in</a> 
               <a href="#">FAQs</a>
             </div>
             <div class="header__top__hover">
