--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,37 @@
-<p>login works!</p>
+<div class="w-75 m-auto py-5">
+
+    <div *ngIf='error' class="alert alert-danger">
+        <p>{{error}}</p>
+    </div>
+
+<form [formGroup]='loginForm'  (ngSubmit)="submitLoginForm(loginForm)" > 
+    
+ 
+
+
+
+    <div class="form-group">
+        <label for="email">E-mail</label>
+        <input formControlName='email' class="form-control" type="text" name="" id="email">
+       
+    </div>
+ 
+
+    <div class="form-group">
+        <label for="password">Password</label>
+        <input formControlName='password' class="form-control" type="password" name="" id="password">
+      
+    </div>
+
+
+
+  
+
+    
+<div class="d-flex justify-content-center">
+    <button [disabled]='loginForm.invalid'class="btn btn-info text-center " type="submit">Login</button>
+  </div>
+
+</form>
+
+</div>
