--- a/src/app/shopping-cart/cart-total/cart-total.component.html
+++ b/src/app/shopping-cart/cart-total/cart-total.component.html
@@ -1,8 +1,12 @@
 <div class="cart__total">
   <h6>Cart total</h6>
   <ul>
-    <li>Items <span>44</span></li>
-    <li>Total <span>$ 169.50</span></li>
+    <li>
+      Items <span>{{ cartTotal.items }}</span>
+    </li>
+    <li>
+      Total <span>$ {{ cartTotal.total }}</span>
+    </li>
   </ul>
   <a href="#" class="primary-btn">Proceed to checkout</a>
 </div>
