show product in shop page from API

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,8 +5,8 @@
 
 <!-- <app-home></app-home> -->
 
-<!-- <app-shop></app-shop> -->
+<app-shop></app-shop>
 
-<app-shopping-cart></app-shopping-cart>
+<!-- <app-shopping-cart></app-shopping-cart> -->
 
 <!-- <app-blog></app-blog> -->
