--- a/src/app/product-card/product-card.component.html
+++ b/src/app/product-card/product-card.component.html
@@ -1,12 +1,9 @@
-<div class="product__item {{ currentProduct.badge }}">
+<div class="product__item">
   <div
-    style="background-image: url('{{ currentProduct.imgUrl }}')"
+    style="background-image: url('{{ currentProduct.image }}')"
     class="product__item__pic set-bg"
     data-setbg="assets/img/product/product-1.jpg"
   >
-    <span class="label" *ngIf="currentProduct.badge != ''">{{
-      currentProduct.badge
-    }}</span>
     <ul class="product__hover">
       <li>
         <a href="#">
@@ -26,18 +23,16 @@
     </ul>
   </div>
   <div class="product__item__text">
-    <h6>{{ currentProduct.title }}</h6>
+    <h6>{{ currentProduct.name }}</h6>
     <a href="#" class="add-cart">+ Add To Cart</a>
     <h5>${{ currentProduct.price }}</h5>
     <div class="product__color__select">
-      <label for="pc-7">
-        <input type="radio" id="pc-7" />
-      </label>
-      <label class="active black" for="pc-8">
-        <input type="radio" id="pc-8" />
-      </label>
-      <label class="grey" for="pc-9">
-        <input type="radio" id="pc-9" />
+      <label
+        *ngFor="let color of currentProduct.colors"
+        [style.background-color]="color.colorHex"
+        [for]="color.colorName"
+      >
+        <input type="radio" [id]="color.colorName" />
       </label>
     </div>
   </div>
