--- a/src/app/shop/shop-products/shop-products.component.html
+++ b/src/app/shop/shop-products/shop-products.component.html
@@ -1,6 +1,6 @@
 <app-product-cart
 class="col-lg-4 col-md-6 col-sm-6"
-*ngFor="let product of products"
+*ngFor="let product of loadedProducts"
 [currentProduct]="product"
 >
 </app-product-cart>
