--- a/src/app/home/products/products.component.html
+++ b/src/app/home/products/products.component.html
@@ -10,12 +10,12 @@
       </div>
     </div>
     <div class="row product__filter">
-      <app-product-cart
+      <!-- <app-product-cart
         class="col-lg-3 col-md-6 col-sm-6 col-md-6 col-sm-6 mix {{product.category}}"
         *ngFor="let product of products"
         [currentProduct]="product"
       >
-      </app-product-cart>
+      </app-product-cart> -->
     </div>
   </div>
 </section>
