--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -10,7 +10,7 @@
       </div>
       <div class="col-lg-9">
         <app-product-option></app-product-option>
-        <app-shop-products class="row"></app-shop-products>
+        <app-shop-products class="row" [loadedProducts]="loadedProducts"></app-shop-products>
         <div class="row">
           <div class="col-lg-12">
             <app-product-pagination></app-product-pagination>
