filter products by categories

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,33 +1,34 @@
-    <!-- Offcanvas Menu Begin -->
-    <div class="offcanvas-menu-overlay"></div>
-    <div class="offcanvas-menu-wrapper">
-        <div class="offcanvas__option">
-            <div class="offcanvas__links">
-                <a href="#">Sign in</a>
-                <a href="#">FAQs</a>
-            </div>
-            <div class="offcanvas__top__hover">
-                <span>Usd <i class="arrow_carrot-down"></i></span>
-                <ul>
-                    <li>USD</li>
-                    <li>EUR</li>
-                    <li>USD</li>
-                </ul>
-            </div>
-        </div>
-        <div class="offcanvas__nav__option">
-            <a href="#" class="search-switch"><img src="assets/img/icon/search.png" alt=""></a>
-            <a href="#"><img src="assets/img/icon/heart.png" alt=""></a>
-            <a href="#"><img src="assets/img/icon/cart.png" alt=""> <span>0</span></a>
-            <div class="price">$0.00</div>
-        </div>
-        <div id="mobile-menu-wrap"></div>
-        <div class="offcanvas__text">
-            <p>Free shipping, 30-day return or refund guarantee.</p>
-        </div>
+<!-- Offcanvas Menu Begin -->
+<div class="offcanvas-menu-overlay"></div>
+<div class="offcanvas-menu-wrapper">
+  <div class="offcanvas__option">
+    <div class="offcanvas__links">
+      <a href="#">Sign in</a>
+      <a href="#">FAQs</a>
     </div>
-    <!-- Offcanvas Menu End -->
-
+    <div class="offcanvas__top__hover">
+      <span>Usd <i class="arrow_carrot-down"></i></span>
+      <ul>
+        <li>USD</li>
+        <li>EUR</li>
+        <li>USD</li>
+      </ul>
+    </div>
+  </div>
+  <div class="offcanvas__nav__option">
+    <a href="#" class="search-switch"
+      ><img src="assets/img/icon/search.png" alt=""
+    /></a>
+    <a href="#"><img src="assets/img/icon/heart.png" alt="" /></a>
+    <a href="#"><img src="assets/img/icon/cart.png" alt="" /> <span>0</span></a>
+    <div class="price">$0.00</div>
+  </div>
+  <div id="mobile-menu-wrap"></div>
+  <div class="offcanvas__text">
+    <p>Free shipping, 30-day return or refund guarantee.</p>
+  </div>
+</div>
+<!-- Offcanvas Menu End -->
 
 <header class="header">
   <div class="header__top">
@@ -42,7 +43,7 @@
           <div class="header__top__right">
             <div class="header__top__links">
               <a routerLink="register">Register</a>
-              <a routerLink="login">Sign in</a> 
+              <a routerLink="login">Sign in</a>
               <a href="#">FAQs</a>
             </div>
             <div class="header__top__hover">
@@ -70,8 +71,8 @@
       <div class="col-lg-6 col-md-6">
         <nav class="header__menu mobile-menu">
           <ul>
-            <li class="active"><a href="./index.html">Home</a></li>
-            <li><a href="./shop.html">Shop</a></li>
+            <li class="active"><a href="">Home</a></li>
+            <li><a href="/shop">Shop</a></li>
             <li>
               <a href="#">Pages</a>
               <ul class="dropdown">
