--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
 
 <!-- <app-home></app-home> -->
 
-<app-shop></app-shop>
+<!-- <app-shop></app-shop> -->
 
 <!-- <app-shopping-cart></app-shopping-cart> -->
 
