--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -42,8 +42,9 @@
         <div class="col-lg-6 col-md-5">
           <div class="header__top__right">
             <div class="header__top__links">
-              <a routerLink="register">Register</a>
-              <a routerLink="login">Sign in</a>
+              <a *ngIf='!isLogin' routerLink="register">Register</a>
+              <a *ngIf='!isLogin' routerLink="login">Sign in</a>
+              <a *ngIf='isLogin' routerLink="" (click)="isLogOut()" >Log Out</a>
               <a href="#">FAQs</a>
             </div>
             <div class="header__top__hover">
@@ -71,20 +72,20 @@
       <div class="col-lg-6 col-md-6">
         <nav class="header__menu mobile-menu">
           <ul>
-            <li class="active"><a href="">Home</a></li>
-            <li><a href="/shop">Shop</a></li>
+            <li class="active"><a *ngIf='isLogin' href="">Home</a></li>
+            <li><a *ngIf='isLogin' href="/shop">Shop</a></li>
             <li>
-              <a href="#">Pages</a>
+              <a *ngIf='isLogin' href="#">Pages</a>
               <ul class="dropdown">
-                <li><a href="./about.html">About Us</a></li>
-                <li><a href="./shop-details.html">Shop Details</a></li>
-                <li><a href="./shopping-cart.html">Shopping Cart</a></li>
-                <li><a href="./checkout.html">Check Out</a></li>
-                <li><a href="./blog-details.html">Blog Details</a></li>
+                <li><a *ngIf='isLogin' href="./about.html">About Us</a></li>
+                <li><a *ngIf='isLogin' href="./shop-details.html">Shop Details</a></li>
+                <li><a *ngIf='isLogin' href="./shopping-cart.html">Shopping Cart</a></li>
+                <li><a *ngIf='isLogin' href="./checkout.html">Check Out</a></li>
+                <li><a *ngIf='isLogin' href="./blog-details.html">Blog Details</a></li>
               </ul>
             </li>
-            <li><a href="./blog.html">Blog</a></li>
-            <li><a href="./contact.html">Contacts</a></li>
+            <li><a *ngIf='isLogin' href="./blog.html">Blog</a></li>
+            <li><a *ngIf='isLogin' href="./contact.html">Contacts</a></li>
           </ul>
         </nav>
       </div>
