--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -12,7 +12,7 @@
 
     <div class="form-group">
         <label for="email">E-mail</label>
-        <input formControlName='email' class="form-control" type="text" name="" id="email">
+        <input formControlName='email' class="form-control" type="email" name="" id="email">
        
     </div>
  
@@ -23,13 +23,9 @@
       
     </div>
 
-
-
-  
-
     
 <div class="d-flex justify-content-center">
-    <button [disabled]='loginForm.invalid'class="btn btn-info text-center " type="submit">Login</button>
+    <button class="btn btn-info text-center " type="submit">Login</button>
   </div>
 
 </form>
