--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -6,11 +6,19 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-3">
-        <app-shop-according></app-shop-according>
+        <app-shop-according
+          (filterByPriceEvent)="filterByPriceParent($event)"
+          (filterBySizeEvent)="filterBySizeParent($event)"
+          (filterColorEvent)="filterByColorParent($event)"
+        >
+        </app-shop-according>
       </div>
       <div class="col-lg-9">
         <app-product-option></app-product-option>
-        <app-shop-products class="row" [loadedProducts]="loadedProducts"></app-shop-products>
+        <app-shop-products
+          class="row"
+          [loadedProducts]="loadedProducts"
+        ></app-shop-products>
         <div class="row">
           <div class="col-lg-12">
             <app-product-pagination></app-product-pagination>
