userName login display

--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -73,6 +73,7 @@
     
 <div class="d-flex justify-content-center">
     <button [disabled]='registerForm.invalid'class="btn btn-info text-center " type="submit">Register</button>
+    <button (click)="goToLogIn()" class="btn btn-info text-center " type="submit">Login</button>
   </div>
 
 </form>
