connect product details page with product data from API

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -69,16 +69,16 @@
           <ul>
             <li class="active"><a  href="">Home</a></li>
             <li><a  href="/shop">Shop</a></li>
-            <li>
+            <!-- <li>
               <a  href="#">Pages</a>
               <ul class="dropdown">
                 <li><a  href="./about.html">About Us</a></li>
                 <li><a  href="./shop-details.html">Shop Details</a></li>
-                <li><a  href="./shopping-cart.html">Shopping Cart</a></li>
+                <li><a  href="cart">Shopping Cart</a></li>
                 <li><a  href="./checkout.html">Check Out</a></li>
                 <li><a  href="./blog-details.html">Blog Details</a></li>
               </ul>
-            </li>
+            </li> -->
             <li><a  href="./blog.html">Blog</a></li>
             <li><a  href="./contact.html">Contacts</a></li>
           </ul>
@@ -90,7 +90,7 @@
             ><img src="assets/img/icon/search.png" alt=""
           /></a>
           <a href="#"><img src="assets/img/icon/heart.png" alt="" /></a>
-          <a href="#"
+          <a href="cart"
             ><img src="assets/img/icon/cart.png" alt="" /> <span>0</span></a
           >
           <div class="price">$0.00</div>
