--- a/src/app/product-card/product-card.component.html
+++ b/src/app/product-card/product-card.component.html
@@ -18,7 +18,7 @@
         </a>
       </li>
       <li>
-        <a href="#"><img src="assets/img/icon/search.png" alt="" /></a>
+        <a href="shop/details/{{currentProduct._id}}"><img src="assets/img/icon/search.png" alt="" /></a>
       </li>
     </ul>
   </div>
