--- a/src/app/shop-deatils/shop-deatils.component.scss
+++ b/src/app/shop-deatils/shop-deatils.component.scss
@@ -159,6 +159,17 @@
       display: inline-block;
       margin-right: 10px;
     }
+    
+    input {
+      position: absolute;
+      visibility: hidden;
+    }
+
+    input[type="radio"]:checked + label {
+      background: $heading-color;
+      color: $white-color;
+      border-color: $heading-color;
+    }
   
     label {
       color: $heading-color;
@@ -171,17 +182,6 @@
       margin-bottom: 0;
       margin-right: 5px;
       cursor: pointer;
-  
-      &.active {
-        background: $heading-color;
-        color: $white-color;
-        border-color: $heading-color;
-      }
-  
-      input {
-        position: absolute;
-        visibility: hidden;
-      }
     }
   }
   
@@ -197,6 +197,15 @@
       position: relative;
       top: -9px;
     }
+
+    input {
+      position: absolute;
+      visibility: hidden;
+    }
+
+    input[type="radio"]:checked + label::after {
+      border: 1px solid black;
+    }
   
     label {
       height: 30px;
@@ -207,27 +216,7 @@
       margin-bottom: 0;
       display: inline-block;
       cursor: pointer;
-  
-      &.c-1 {
-        background: #0b090c;
-      }
-  
-      &.c-2 {
-        background: #20315f;
-      }
-  
-      &.c-3 {
-        background: #f1af4d;
-      }
-  
-      &.c-4 {
-        background: #ed1c24;
-      }
-  
-      &.c-9 {
-        background: #ffffff;
-      }
-  
+
       &:after {
         position: absolute;
         left: -3px;
@@ -237,11 +226,6 @@
         border: 1px solid #e5e5e5;
         content: "";
         border-radius: 50%;
-      }
-  
-      input {
-        position: absolute;
-        visibility: hidden;
       }
     }
   }
@@ -289,7 +273,7 @@
   }
   
   .product__details__btns__option {
-    margin-bottom: 40px;
+    margin-bottom: 30px;
   
     a {
       display: inline-block;
@@ -306,124 +290,5 @@
     }
   }
   
-  .product__details__last__option {
-    h5 {
-      color: $heading-color;
-      font-weight: 700;
-      font-size: 20px;
-      position: relative;
-      margin-bottom: 26px;
-  
-      span {
-        background: $white-color;
-        padding: 0 30px;
-      }
-  
-      &:before {
-        position: absolute;
-        left: 0;
-        right: 0;
-        top: 10px;
-        height: 1px;
-        width: 460px;
-        background: #e5e5e5;
-        content: "";
-        z-index: -1;
-        margin: 0 auto;
-      }
-    }
-  
-    ul {
-      padding-top: 40px;
-  
-      li {
-        list-style: none;
-        font-size: 15px;
-        color: $heading-color;
-        font-weight: 700;
-        line-height: 30px;
-  
-        span {
-          font-weight: 400;
-          color: #b7b7b7;
-        }
-      }
-    }
-  }
-  
-  .product__details__tab {
-    padding-top: 60px;
-  
-    .nav-tabs {
-      border-bottom: 1px solid #e5e5e5;
-      justify-content: center;
-  
-      .nav-item {
-        margin-right: 50px;
-  
-        &:last-child {
-          margin-right: 0;
-        }
-  
-        .nav-link {
-          font-size: 20px;
-          color: #b7b7b7;
-          padding: 0;
-          border: none;
-          font-weight: 700;
-          padding-bottom: 10px;
-          border-bottom: 2px solid transparent;
-  
-          &.active {
-            border-bottom: 2px solid $primary-color;
-          }
-        }
-      }
-    }
-  }
-  
-  .product__details__tab__content {
-    padding-top: 35px;
-  }
-  
-  .note {
-    color: $heading-color;
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 28px;
-    margin-bottom: 25px;
-  }
-  
-  .product__details__tab__content__item {
-    margin-bottom: 30px;
-  
-    &:last-child {
-      margin-bottom: 0;
-    }
-  
-    h5 {
-      color: $heading-color;
-      font-size: 20px;
-      font-weight: 700;
-      margin-bottom: 12px;
-    }
-  
-    p {
-      margin-bottom: 0;
-    }
-  }
-  
-  /*---------------------
-    Related
-  -----------------------*/
-  .related {
-    padding-bottom: 55px;
-  }
-  
-  .related-title {
-    color: $heading-color;
-    font-weight: 700;
-    margin-bottom: 45px;
-    text-align: center;
-  }
+
   @import "../../css/responsive";  
