--- a/src/app/shop-deatils/shop-deatils.component.html
+++ b/src/app/shop-deatils/shop-deatils.component.html
@@ -6,8 +6,8 @@
       <div class="row">
         <div class="col-lg-12">
           <div class="product__details__breadcrumb">
-            <a href="./index.html">Home</a>
-            <a href="./shop.html">Shop</a>
+            <a href="">Home</a>
+            <a href="./shop">Shop</a>
             <span>Product Details</span>
           </div>
         </div>
@@ -23,10 +23,11 @@
                 role="tab"
               >
                 <div
+                  *ngIf="currentProduct !== undefined"
                   class="product__thumb__pic set-bg"
                   data-setbg="img/shop-details/thumb-1.png"
-                  style="
-                    background-image: url('assets/img/shop-details/thumb-1.png');
+                  [style.background-image]="
+                    'url(' + currentProduct.images[1] + ')'
                   "
                 ></div>
               </a>
@@ -34,10 +35,11 @@
             <li class="nav-item">
               <a class="nav-link" data-toggle="tab" href="#tabs-2" role="tab">
                 <div
+                  *ngIf="currentProduct !== undefined"
                   class="product__thumb__pic set-bg"
-                  data-setbg="img/shop-details/thumb-2.png"
-                  style="
-                    background-image: url('assets/img/shop-details/thumb-2.png');
+                  data-setbg="img/shop-details/thumb-1.png"
+                  [style.background-image]="
+                    'url(' + currentProduct.images[2] + ')'
                   "
                 ></div>
               </a>
@@ -45,10 +47,11 @@
             <li class="nav-item">
               <a class="nav-link" data-toggle="tab" href="#tabs-3" role="tab">
                 <div
+                  *ngIf="currentProduct !== undefined"
                   class="product__thumb__pic set-bg"
-                  data-setbg="img/shop-details/thumb-3.png"
-                  style="
-                    background-image: url('assets/img/shop-details/thumb-3.png');
+                  data-setbg="img/shop-details/thumb-1.png"
+                  [style.background-image]="
+                    'url(' + currentProduct.images[0] + ')'
                   "
                 ></div>
               </a>
@@ -56,43 +59,54 @@
             <li class="nav-item">
               <a class="nav-link" data-toggle="tab" href="#tabs-4" role="tab">
                 <div
+                  *ngIf="currentProduct !== undefined"
                   class="product__thumb__pic set-bg"
-                  data-setbg="img/shop-details/thumb-4.png"
-                  style="
-                    background-image: url('assets/img/shop-details/thumb-4.png');
+                  data-setbg="img/shop-details/thumb-1.png"
+                  [style.background-image]="
+                    'url(' + currentProduct.images[3] + ')'
                   "
-                >
-                  <i class="fa fa-play"></i>
-                </div>
+                ></div>
               </a>
             </li>
           </ul>
         </div>
+
         <div class="col-lg-6 col-md-9">
           <div class="tab-content">
             <div class="tab-pane active" id="tabs-1" role="tabpanel">
               <div class="product__details__pic__item">
-                <img src="assets/img/shop-details/product-big-2.png" alt="" />
+                <img
+                  *ngIf="currentProduct !== undefined"
+                  [src]="currentProduct.images[1]"
+                  style="height: 590px"
+                />
               </div>
             </div>
             <div class="tab-pane" id="tabs-2" role="tabpanel">
               <div class="product__details__pic__item">
-                <img src="assets/img/shop-details/product-big-3.png" alt="" />
+                <img
+                  *ngIf="currentProduct !== undefined"
+                  [src]="currentProduct.images[2]"
+                  style="height: 590px"
+                />
               </div>
             </div>
             <div class="tab-pane" id="tabs-3" role="tabpanel">
               <div class="product__details__pic__item">
-                <img src="assets/img/shop-details/product-big.png" alt="" />
+                <img
+                  *ngIf="currentProduct !== undefined"
+                  [src]="currentProduct.images[0]"
+                  style="height: 590px"
+                />
               </div>
             </div>
             <div class="tab-pane" id="tabs-4" role="tabpanel">
               <div class="product__details__pic__item">
-                <img src="assets/img/shop-details/product-big-4.png" alt="" />
-                <a
-                  href="https://www.youtube.com/watch?v=8PJ3_p7VqHw&list=RD8PJ3_p7VqHw&start_radio=1"
-                  class="video-popup"
-                  ><i class="fa fa-play"></i
-                ></a>
+                <img
+                  *ngIf="currentProduct !== undefined"
+                  [src]="currentProduct.images[3]"
+                  style="height: 590px"
+                />
               </div>
             </div>
           </div>
@@ -100,84 +114,86 @@
       </div>
     </div>
   </div>
+
   <div class="product__details__content">
     <div class="container">
       <div class="row d-flex justify-content-center">
         <div class="col-lg-8">
           <div class="product__details__text">
-            <h4>Hooded thermal anorak</h4>
-            <div class="rating">
-              <i class="fa fa-star"></i>
-              <i class="fa fa-star"></i>
-              <i class="fa fa-star"></i>
-              <i class="fa fa-star"></i>
-              <i class="fa fa-star-o"></i>
-              <span> - 5 Reviews</span>
-            </div>
-            <h3>$270.00 <span>70.00</span></h3>
-            <p>
-              Coat with quilted lining and an adjustable hood. Featuring long
-              sleeves with adjustable cuff tabs, adjustable asymmetric hem with
-              elastic side tabs and a front zip fastening with placket.
-            </p>
-            <div class="product__details__option">
-              <div class="product__details__option__size">
-                <span>Size:</span>
-                <label for="xxl"
-                  >xxl
-                  <input type="radio" id="xxl" />
-                </label>
-                <label class="active" for="xl"
-                  >xl
-                  <input type="radio" id="xl" />
-                </label>
-                <label for="l"
-                  >l
-                  <input type="radio" id="l" />
-                </label>
-                <label for="sm"
-                  >s
-                  <input type="radio" id="sm" />
-                </label>
-              </div>
-              <div class="product__details__option__color">
-                <span>Color:</span>
-                <label class="c-1" for="sp-1">
-                  <input type="radio" id="sp-1" />
-                </label>
-                <label class="c-2" for="sp-2">
-                  <input type="radio" id="sp-2" />
-                </label>
-                <label class="c-3" for="sp-3">
-                  <input type="radio" id="sp-3" />
-                </label>
-                <label class="c-4" for="sp-4">
-                  <input type="radio" id="sp-4" />
-                </label>
-                <label class="c-9" for="sp-9">
-                  <input type="radio" id="sp-9" />
-                </label>
-              </div>
-            </div>
-            <div class="product__details__cart__option">
-              <div class="quantity">
-                <div class="pro-qty">
-                  <input type="text" value="1" />
+            <form>
+              <h4>{{ currentProduct?.name }}</h4>
+              <h3>${{ currentProduct?.price }}</h3>
+              <p>{{ currentProduct?.description }}</p>
+              <div class="product__details__option">
+                <div class="product__details__option__size">
+                  <span>Size:</span>
+                  <ng-container
+                    *ngFor="let size of currentProduct?.sizes; first as isFirst"
+                  >
+                    <input
+                      *ngIf="isFirst"
+                      checked
+                      type="radio"
+                      [id]="size"
+                      name="size"
+                    />
+                    <input
+                      *ngIf="!isFirst"
+                      type="radio"
+                      [id]="size"
+                      name="size"
+                    />
+                    <label [for]="size">{{ size }}</label>
+                  </ng-container>
+                </div>
+                <div class="product__details__option__color">
+                  <span>Color:</span>
+                  <ng-container
+                    *ngFor="
+                      let color of currentProduct?.colors;
+                      first as isFirst
+                    "
+                  >
+                    <input
+                      *ngIf="isFirst"
+                      checked
+                      type="radio"
+                      [id]="color.colorName"
+                      name="color"
+                    />
+                    <input
+                      *ngIf="!isFirst"
+                      type="radio"
+                      [id]="color.colorName"
+                      name="color"
+                    />
+                    <label
+                      [for]="color.colorName"
+                      [style.background-color]="color.colorHex"
+                    ></label>
+                  </ng-container>
                 </div>
               </div>
-              <a href="#" class="primary-btn">add to cart</a>
-            </div>
-            <div class="product__details__btns__option">
-              <a href="#"><i class="fa fa-heart"></i> add to wishlist</a>
-              <a href="#"><i class="fa fa-exchange"></i> Add To Compare</a>
-            </div>
-            <div class="product__details__last__option">
-              <h5><span>Guaranteed Safe Checkout</span></h5>
-              <img src="img/shop-details/details-payment.png" alt="" />
-              <ul>
-                <li><span>Categories:</span> Clothes</li>
-              </ul>
-            </div>
+              <div class="product__details__cart__option">
+                <div class="quantity">
+                  <div class="pro-qty">
+                    <span
+                      (click)="increaseQuantity()"
+                      class="fa fa-angle-up dec qtybtn"
+                    ></span>
+                    <input type="text" [value]="quantity" />
+                    <span
+                      (click)="decreaseQuantity()"
+                      class="fa fa-angle-down inc qtybtn"
+                    ></span>
+                  </div>
+                </div>
+                <a href="#" class="primary-btn">add to cart</a>
+              </div>
+              <div class="product__details__btns__option">
+                <a href="#"><i class="fa fa-heart"></i> add to wishlist</a>
+              </div>
+            </form>
           </div>
         </div>
       </div>
